[package]
name = "lobbymaker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", features = [
  "client",
  "gateway",
  "rustls_backend",
  "model",
  "standard_framework",
] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
dotenv = "0.15.0"
